# QC_WEB

./: .gitignore  README.md  notes.txt  package-lock.json  package.json  proxy.ts  qc-doctor.mjs  qc-doctor.sh  tsconfig.json  vercel.json
app/: LandingClient.tsx  globals.css  layout.tsx
django_backend/: README.md
lib/: authServer.ts  deliveryWorkerCore.ts  momentDelivery.ts  momentScheduling.ts  processDueMoments.ts  profileFallback.ts  settingsPreferences.ts  supabaseAdmin.ts  supabaseBrowser.ts  timezone.ts  (+4 more)
qc_backend/: README.md  alembic.ini  pyproject.toml
qc_backend/alembic/: env.py
qc_backend/alembic/versions/: 20260411_0001_initial_schema.py
qc_backend/app/: main.py
qc_backend/app/api/: router.py
qc_backend/app/api/routes/: __init__.py  assets.py  chat.py  conversations.py  health.py  moments.py  realtime.py
qc_backend/app/core/: config.py  logging.py
qc_backend/app/db/: base.py  session.py
qc_backend/app/models/: __init__.py  ai_generation.py  conversation.py  enums.py  generation_job.py  message.py  moment.py  moment_asset.py  user.py
qc_backend/app/prompts/: __init__.py  system.py
qc_backend/app/schemas/: __init__.py  assets.py  common.py  conversation.py  moment.py  realtime.py  scene.py  speech.py
qc_backend/app/services/: __init__.py  audio_analysis.py  conversation_engine.py  conversation_store.py  emotion_mapping.py  image_engine.py  moment_engine.py  normalizers.py  openai_client.py  orchestration.py  realtime_engine.py  repository.py  safety.py  scene_engine.py  speech_engine.py
qc_backend/app/workers/: __init__.py  jobs.py
(+140 files in other folders)
