[project]
name = "qc-backend"
version = "0.1.0"
description = "QC multimodal emotional creation engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "openai>=1.99.0",
  "sqlalchemy[asyncio]>=2.0.38",
  "asyncpg>=0.30.0",
  "alembic>=1.16.4",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "redis>=6.2.0",
  "rq>=2.4.1",
  "httpx>=0.28.1",
  "orjson>=3.11.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.8",
  "mypy>=1.17.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
